Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -182,6 +182,7 @@ footer {
 		z-index: 1;
 		}
 	section {
+		position: static;
 		margin: 0;
 		float: none;
 	  	padding: 0 0 50px 0;
